tests/neg/negNamedPatternMatching.check
-- Error: tests/neg/negNamedPatternMatching.scala:21:20 ----------------------------------------------------------------
21 |  case User(names = "Tom", city = city) => ??? // error
   |                    ^^^^^
   |                    'names' is unknown
-- Error: tests/neg/negNamedPatternMatching.scala:22:22 ----------------------------------------------------------------
22 |  case User(city = _, 10) => null // error
   |                      ^^
   |                      Only named arguments allowed here
-- Error: tests/neg/negNamedPatternMatching.scala:25:11 ----------------------------------------------------------------
25 |    name = "Tom 2",  // error
   |           ^^^^^^^
   |           'name' was already used before
-- Error: tests/neg/negNamedPatternMatching.scala:26:11 ----------------------------------------------------------------
26 |    name = "Tom 3" // error
   |           ^^^^^^^
   |           'name' was already used before
